--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Running mock tests... App is healthy.\" && exit 0"
+    "test": "echo \"Running mock tests... App is healthy.\" && exit 0",
+    "lint": "eslint ."
   },
   "dependencies": {
     "express": "^4.18.2"
   }
 }
+
